Fixed the invisible text in the login page

--- a/public/stylesheets/registerStyle.css
+++ b/public/stylesheets/registerStyle.css
@@ -26,6 +26,7 @@ body {
     width: 100%;
     height: 42px;
     box-sizing: border-box;
+    color: #0f0f0f;
     border-radius: 5px;
     border: 1px solid #ccc;
     margin-bottom: 20px;
